<resources>
    <string name="app_name">TruthOrDare</string>
    <string name="title">Truth or Dare?</string>
    <string name="start_button">Start game</string>
    <string name="your_options_button">Your options</string>
    <string name="dare">Dare</string>
    <string name="truth">Truth</string>
    <string name="back_to_start">Back to start</string>
    <string name="add_your_option">Add your option</string>
    <string name="allows_user_to_change_the_option">Allows user to change the option</string>
    <string name="allows_user_to_delete_the_option">Allows user to delete the option</string>
    <string name="enter_your_text">Enter your text</string>
    <string name="accept">Accept</string>
</resources>